fix: product popup z-index

--- a/src/style/pages/_product-page.scss
+++ b/src/style/pages/_product-page.scss
@@ -181,6 +181,7 @@
   transition: .3s;
   background-color: rgba(255, 255, 255, 0);
   visibility: hidden;
+  z-index: 300;
 
   & .product-page__popup-img {
     display: flex;
@@ -195,6 +196,7 @@
     transition: .3s;
     opacity: 0;
     box-shadow: $shadow;
+    
 
     @media (max-width: 600px) {
       width: 300px;
